Overflow hidden on .post to fix footer position
Currently 
Setting `overflow: hidden` on .post will force article.body's height to include `position:float` elements

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -669,6 +669,7 @@ margin on the iframe, cause it breaks stuff. */
     border-bottom: #EBF2F6 1px solid;
     word-break: break-word;
     hyphens: auto;
+    overflow: hidden;
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post
